Language and Module Visualization #10 +) fix sidebar handling for various visualisations +) add collapse handling to hide sidebar +) fix resize warning

--- a/ui/src/components/Sidebar/sidebar.css
+++ b/ui/src/components/Sidebar/sidebar.css
@@ -6,6 +6,18 @@
   overflow-y: auto;
 }
 
+.sidebar .panel-heading {
+  display: flex;
+}
+
+.sidebar .panel-heading span {
+  flex: 2 1 auto;
+}
+
+.sidebar .panel-heading .button {
+  cursor: pointer;
+}
+
 .sidebar .configuration {
   flex-grow: 1;
   align-items: flex-start;
